# wikipedia-retriever

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  queries.txt
app/: main.py  schemas.py
app/api/: deps.py  routes.py
app/core/: config.py  logging.py  metrics.py
app/retriever/: __init__.py  wikipedia.py
deploy/: alloy-wiki.snippet.alloy  apply.sh  prometheus.yml  wiki.conf
scripts/: bench.py  query.py
src/: wikipedia.py
tools/: __init__.py  wikipedia.py
