[project]
name = "wikipedia-retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
]
